Fixing spacing before Insider view bloc

--- a/app/javascript/stylesheets/landing/_insider_section.scss
+++ b/app/javascript/stylesheets/landing/_insider_section.scss
@@ -11,6 +11,7 @@
 
 .insider-section__headline {
   font-size: 2.5rem;
+  margin-top: 1.5rem;
   margin-bottom: 1rem;
 }
 
